[BE] 전문 검색 인덱스 적용 (#529)
* build: mysql 의존성 추가

* feat: 쿼리 최적화 추가 및 기존 페이징 변경

* feat: 로컬 mysql 도커 파일 추가

* chore: 초기 데이터 설정 및 인덱스 추가

* test: h2에서 mysql로 변경

* test: 문제 테스트 disabled

* refactor: 디버깅 출력 삭제

* fix: 불필요한 공백 및 import 문 제거

* test: 전문 검색 인덱스 테스트 실패 문제 해결 및 활성화

- 원인: MySQL Full-Text Index가 트랜잭션 내에서 즉시 반영되지 않아 발생한 테스트 실패
- 해결: 데이터 준비와 테스트 실행의 트랜잭션을 분리하여, 데이터가 COMMIT된 후 인덱스를 조회하도록 수정 + 커밋된 데이터는 TRUNCATE로 초기화

* chore: 배포 및 테스트 파이프라인 MySQL 환경으로 변경

- 기존 테스트 H2 환경에서 MySQL 환경으로 변경
- 배포 파이프라인에서는 test 임시 제외

* fix: 환경변수 관련 문제 해결

- 환경변수 사용하지 못하는 services 블록 대신 docker run으로 MySQL 컨테이너를 직접 실행하도록 수정

* fix: Firebase 관련 환경변수 추가

* fix: 테스트 파이프라인 MySQL 컨테이너 실행 대기시간 늘림

* refactor: 코드 정리

- 불필요한 import 문 제거
- 불변 변수에 final 키워드 추가
- 개행 추가

* feat: pinpoint 관련 배포 수정

---------

Co-authored-by: Yehyeok Bang <qkddpgur318@gmail.com>